; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_pqueue.c_git_pqueue_pop.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_pqueue.c_git_pqueue_pop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i8**, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @git_pqueue_pop(%struct.TYPE_8__* %0) #0 {
  %2 = alloca %struct.TYPE_8__*, align 8
  %3 = alloca i8*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %2, align 8
  %4 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %1
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %10 = call i8* @git_vector_last(%struct.TYPE_8__* %9)
  store i8* %10, i8** %3, align 8
  br label %14

11:                                               ; preds = %1
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %13 = call i8* @git_pqueue_get(%struct.TYPE_8__* %12, i32 0)
  store i8* %13, i8** %3, align 8
  br label %14

14:                                               ; preds = %11, %8
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %16 = call i32 @git_pqueue_size(%struct.TYPE_8__* %15)
  %17 = icmp sgt i32 %16, 1
  br i1 %17, label %18, label %34

18:                                               ; preds = %14
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %34

23:                                               ; preds = %18
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %25 = call i8* @git_vector_last(%struct.TYPE_8__* %24)
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 0
  %28 = load i8**, i8*** %27, align 8
  %29 = getelementptr inbounds i8*, i8** %28, i64 0
  store i8* %25, i8** %29, align 8
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %31 = call i32 @git_vector_pop(%struct.TYPE_8__* %30)
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %33 = call i32 @pqueue_down(%struct.TYPE_8__* %32, i32 0)
  br label %37

34:                                               ; preds = %18, %14
  %35 = load %struct.TYPE_8__*, %struct.TYPE_8__** %2, align 8
  %36 = call i32 @git_vector_pop(%struct.TYPE_8__* %35)
  br label %37

37:                                               ; preds = %34, %23
  %38 = load i8*, i8** %3, align 8
  ret i8* %38
}

declare dso_local i8* @git_vector_last(%struct.TYPE_8__*) #1

declare dso_local i8* @git_pqueue_get(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @git_pqueue_size(%struct.TYPE_8__*) #1

declare dso_local i32 @git_vector_pop(%struct.TYPE_8__*) #1

declare dso_local i32 @pqueue_down(%struct.TYPE_8__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
